# domyn-swarm

./: .coveragerc  .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  DATA_BACKENDS_PLAN.md  Dockerfile  LICENSE  NOTICE  README.md  REVIEW_RECAP.md  alembic.ini  bench.sh  detached_results.parquet  detached_results_0.parquet  glaive_function_calling_v2_cut.parquet  input_50.parquet  launch.py  launch.slurm  new_results.parquet  pyproject.toml  results.parquet  run_bench.py  swarm_launch_fede.17289180.err  swarm_launch_fede.17289180.out  traces.parquet
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-report.yml  feature-request.yml
.github/workflows/: ci.yaml  release.yaml
docs/: conf.py  configuration.rst  getting_started.rst  index.rst
docs/api/: backends.rst  index.rst  jobs.rst  swarm.rst
docs/cli/: index.rst
docs/howto/: index.rst
docs/superpowers/plans/: 2026-06-05-vllm-prometheus-monitoring.md
docs/superpowers/specs/: 2026-06-05-vllm-prometheus-monitoring-design.md
docs/upstream/: grafatui-feature-requests.md
domyn_swarm/: __init__.py  __main__.py
examples/api/: swarm.slurm  swarm_launch.py
examples/configs/: deepseek_r1.yaml  deepseek_r1_distill.yaml  domyn-small.yaml  italia_10b.yaml  lepton.yaml  qwen3.yaml  qwen3_32B.yaml  simple_config.yaml
examples/data/: chat_completion.parquet  completion.parquet  generate_sample.py
examples/scripts/: custom_job.py  custom_main.py  simple_driver.py
examples/singularity_images/: nginx.def  vllm.def
images/: gpu_exporter_dcgm.def  gpu_exporter_nvidia_smi.def
queries/: create_table.sql  delete_record.sql  insert_record.sql  select_cfg.sql  select_driver.sql  select_swarm.sql  update_lb.sql
src/domyn_swarm/: __init__.py  __main__.py  cli.py  exceptions.py  helpers.py  job.py  jobs.py  pool.py  run_job.py  slurm.py
src/domyn_swarm/backends/: __init__.py
src/domyn_swarm/checkpoint/: arrow_store.py  manager.py  store.py
src/domyn_swarm/cli/: __init__.py  db.py  init.py  job.py  job_helpers.py  main.py  monitor.py  pool.py  submit.py  swarm.py
src/domyn_swarm/config/: __init__.py  backend.py  defaults.py  lepton.py  plan.py  pool.py  settings.py  slurm.py  swarm.py  watchdog.py
src/domyn_swarm/core/: lb_health_checker.py  slurm_driver.py  srun_builder.py  state.py  swarm.py  swarm_pool.py
src/domyn_swarm/data/: __init__.py
src/domyn_swarm/deploy/: deployment.py
src/domyn_swarm/helpers/: data.py  io.py  lepton.py  logger.py  patterns.py  reverse_proxy.py  slurm.py  swarm.py  watchdog.py
src/domyn_swarm/jobs/: __init__.py  arrow_runner.py  base.py  batching.py  chat_completion.py  checkpointing.py  compat.py  polars_runner.py  ray_runner.py  run.py  runner.py
src/domyn_swarm/models/: driver.py  lepton.py  pool.py  swarm.py
src/domyn_swarm/platform/: http_probe.py  protocols.py  readiness.py
src/domyn_swarm/runtime/: __init__.py  collector.py  lb_supervisor.py  status.py  watchdog.py  watchdog_args.py
src/domyn_swarm/templates/: _swarm_common.sh.j2  lb.sh.j2  llm_swarm.sh.j2  llm_swarm_ray.sh.j2  nginx.conf.j2  nginx_server.conf.j2  prometheus.yml.j2
src/domyn_swarm/utils/: __init__.py  cli.py  click_env_path.py  env_path.py  imports.py  version.py
tests/: conftest.py  test_batching.py  test_chat_completion_jobs.py  test_checkpointing.py  test_client_factory.py  test_helpers.py  test_init_module.py  test_io.py  test_jobs_run.py  test_lb_health_checker.py  test_lepton_compute_backend.py  test_slurm_driver.py  test_state.py  test_swarm_job.py  test_swarm_pool.py
tests/backends/: test_lb_template.py  test_lb_template_render.py  test_lepton_compute_backend.py  test_lepton_helpers.py  test_lepton_serving_backend.py  test_llm_swarm_ray_template.py  test_llm_swarm_template.py  test_nginx_server_template.py  test_slurm_compute_backend.py  test_slurm_driver.py  test_slurm_driver_prometheus.py  test_slurm_driver_state.py  test_slurm_helpers.py  test_slurm_mounts.py  test_slurm_readiness.py  test_slurm_serving_backend.py  test_srun_builder.py  test_template_split_parity.py
tests/backends/fixtures/: llm_swarm_baseline_novray.txt  llm_swarm_baseline_ray.txt
tests/checkpoint/: test_arrow_store_basic.py  test_checkpoint_io_offload.py  test_parquet_shard_store.py  test_parquet_shard_store_compat.py  test_store_basic.py
tests/cli/: test_cli_swarm.py  test_cli_swarm_describe.py  test_cli_swarm_list.py  test_db.py  test_init_defaults.py  test_job.py  test_main.py  test_main_callback.py  test_main_helpers.py  test_monitor.py  test_pool.py  test_submit.py  test_tui_views.py  utils.py
tests/config/: test_defaults.py  test_lepton_config.py  test_monitoring_config.py  test_plan_builder.py  test_plan_outputs.py  test_pool_config.py  test_slurm_upstream.py  test_swarm_config.py
tests/core/: test_autoupgrade.py  test_migrate.py  test_state_watchdog_summary.py  test_swarm.py
tests/data/: test_backend_registry.py  test_dashboard.py  test_job_batch.py  test_polars_backend_read.py  test_polars_backend_write.py  test_ray_backend_batching.py  test_ray_backend_helpers.py  test_ray_backend_read_patterns.py
tests/deploy/: test_deployment.py
tests/helpers/: test_io_brace_patterns.py  test_logger.py  test_patterns_brace_expansion.py  test_swarm_utils.py
tests/jobs/: test_api_runner.py  test_batch_executor_streaming.py  test_batching.py  test_chat_completion_jobs.py  test_checkpoint_manager.py  test_job_builder.py  test_jobrunner_run.py  test_jobs_run.py  test_normalize_batch_outputs.py  test_ray_runner.py  test_runner.py  test_sharding.py  test_swarm_job.py
tests/platform/: test_http_probe.py
tests/runtime/: fake_ray_cli.py  fake_watchdog_child.py  fixtures.py  helpers.py  test_collector.py  test_collector_validation.py  test_lb_supervisor.py  test_status_helper.py  test_watchdog_args.py  test_watchdog_collector_integration.py  test_watchdog_defaults.py  test_watchdog_helpers.py  test_watchdog_ray_integration.py
tests/templates/: test_lb_sh_j2.py
tests/utils/: test_cli_utils.py  test_click_env_path.py  test_imports.py  test_version.py
(+72 files in other folders)
